--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, Snaps!</title>
+      Jackson's First Ever Meta Mask Snap - Simple Private Key Store
+    </title>
     <link rel="icon" type="image/svg" href="./images/icon.svg" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <h1>Hello, Snaps!</h1>
+    <div class="container-fluid d-flex justify-content-center">
+      <div class="card mt-5 shadow" style="min-width: 500px">
+        <header class="card-header bg-primary text-white">Action</header>
+        <main class="card-body">
+          <div class="mb-3">
+            <p>Haven&lsquo;t set up an account yet? Let&lsquo;s do it!</p>
+            <button class="btn btn-success w-100" id="btnSetUp">Set Up</button>
+          </div>
+
+          <div>
+            <section class="alert alert-info text-center mb-3">
+              <div>Your Private Key</div>
+              <div>0xABCDEF123345ABCDEF123345ABCDEF123345</div>
+            </section>
+
+            <section class="form-group mb-3">
+              <label for="formControlPlainText" class="mb-2">Plain</label>
+              <textarea
+                class="form-control"
+                type="text"
+                name="plainText"
+                id="formControlPlainText"
+              ></textarea>
+            </section>
+
+            <section class="row mb-3">
+              <div class="col-6">
+                <button class="btn btn-dark w-100">Encrypt</button>
+              </div>
+              <div class="col-6">
+                <button class="btn btn-dark col-6 w-100">Decrypt</button>
+              </div>
+            </section>
+
+            <section class="form-group mb-3">
+              <label for="formControlCipherText" class="mb-2">Cipher</label>
+              <textarea
+                class="form-control"
+                type="text"
+                name="cipherText"
+                id="formControlCipherText"
+              ></textarea>
+            </section>
+          </div>
+        </main>
+      </div>
+    </div>
+
+    <!-- <h1>Hello, Snaps!</h1>
     <details>
       <summary>Instructions</summary>
       <ul>
@@ -44,7 +105,7 @@
         id="password_search"
       /><br />
       <ul id="password_list"></ul>
-    </div>
+    </div> -->
   </body>
 
   <script>
